refactor: apply best practices